# hoshi-project

./: Cargo.toml  README.md
hoshipkg/: Cargo.toml
hoshipkg/src/: lib.rs  main.rs  registry.rs
hoshipkg/src/commands/: delete.rs  list.rs  merge.rs  mod.rs  sync.rs
kaika/: Cargo.toml
kaika/src/: lib.rs  main.rs
kaika/src/formats/: mod.rs  tar_handler.rs  zip_handler.rs
telescope/: Cargo.toml
telescope/src/: main.rs
webfetch/: Cargo.toml  README.md
webfetch/src/: lib.rs  main.rs
